feat(js):Actividad2.1 del tema 2de DWEC, resuelta

--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+
     <h1> ¡Hola mundo!</h1>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Distinctio a consectetur minus magni quis soluta eum voluptatum,
+        ex sed dolorum optio itaque assumenda voluptate aut suscipit aspernatur libero in amet!</p>
+
+    <script>
+        
+        document.write("Hola desde JavaScript <br>");
+        
+        nombre = prompt("Escribe tu nombre");
+
+        document.write("Hola :"+ nombre);
+
+    </script>
+
 </body>
+
 </html>
